# certinext-zabbix

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
certinext_zabbix/: _cli_shared.py  zabbix_push.py  zabbix_push_cli.py
docs/: deployment.md
docs/adr/: 0001-standalone-repo.md  0002-copy-now-canonical-later.md  0003-pypi-ready-not-published.md  0004-github-push-mirror.md  0005-mit-license.md  0006-community-templates-ready-layout.md  0007-domain-scope-reuses-filter-needs-dcv.md
docs/wishlist/: IDEA-001-credential-file-input.md  IDEA-002-community-templates-submission.md  README.md
examples/cron/: certinext-zabbix-push.cron
examples/systemd/: certinext-zabbix-push-expiry.service  certinext-zabbix-push-expiry.timer  certinext-zabbix-push.env.example  certinext-zabbix-push.service  certinext-zabbix-push.timer
examples/windows/: Invoke-CertinextZabbixPush.ps1  README.md  Register-CertinextZabbixPushTasks.ps1  certinext-zabbix.env.example
templates/template_certinext/7.0/: README.md  template_certinext.yaml
tests/: conftest.py  test_zabbix_push.py  test_zabbix_push_cli_mocked.py
